# C-Exercises

ex1/: CMakeLists.txt  README.md  cipher.h  ex1.c  input.txt  output.txt  tests.c
ex2/: CMakeLists.txt  LinkedList.txt  LinkedList_1025.txt  README.docx  README.md  a.c  ex2.c  ex2.h  first.txt  main.c  strtok_example.c  test.c  test_ex2.c  third1.txt  third2.txt
ex3/: CMakeLists.txt  Makefile  README.docx  README.md  ex3.c  ex3.h  test_concatenate.c  test_ex3.c  test_runner.c  test_runner.h  tests.c
ex3/test_ex3/: README.docx  test_ex3.c
ex4/: CMakeLists.txt  Hash.h  HashSet.c  HashSet.h  Makefile  Node.c  Node.h  README.md  TestHashSet.c  ex4_tests  presubmit.c  testNode.c  test_runner.c  test_runner.h  tests.c
